Text fix for submit buttons on import screens, work around stupid Mozilla bug where file inputs can neither be styled nor have their click event triggered

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -228,7 +228,9 @@ filter: alpha(opacity=00);
 width: 24.5em;
 padding: 0;
 cursor: pointer;
+cursor: hand;
 z-index:5;
+text-align: right;
 }
 
 .fakebrowse {
