--- a/app/views/trips/list.html.erb
+++ b/app/views/trips/list.html.erb
@@ -41,12 +41,12 @@
                <% else %>
                  <span class="status-uncompleted" title="Uncompleted">Uncompleted</span></td>
                <% end %>
-               <td> <%= trip.provider %></td>
-               <td> (FIXME: funding source / allocation not yet in trip that I can see) %></td>
+               <td> <%= trip.provider.name %></td>
+               <td> (FIXME: funding source / allocation not yet in trip that I can see)</td>
                <td>
-                 <%= gmaps_address_link trip.pickup_address, "trip-pickup" %></td>
+                 <%= raw gmaps_address_link trip.pickup_address, "trip-pickup" %></td>
                <td>
-                 <%= gmaps_address_link trip.dropoff_address, "trip-dropoff" %></td>
+                 <%= raw gmaps_address_link trip.dropoff_address, "trip-dropoff" %></td>
                <td><%= trip.customers_served %></td>
                <td>
 <% if trip.customers_served == 0 %>
@@ -55,11 +55,16 @@
 No
 <% end %>
                <td>
+<% if trip.run %>
 <%= link_to trip.run.name, :action=>:show, :controller=>:run, :id=>trip.run.id, :html_options=>{:title=>"View all trips in this Run"} %></td>
+<% else %>
+(no run)
+<% end %>
+
 </td>
                <td>$<%= trip.fare %></td>
                <td>
-<%= link_to "Details", :action=>:show_trip, :id=>trip.id, :html_options=>{:title=>"View details for this trpi"} %></td>
+<%= link_to "Details", :action=>:show_trip, :id=>trip.id, :html_options=>{:title=>"View details for this trip"} %></td>
              </tr>
              <% end %>
            </tbody>
