use correct url for list of trips

--- a/app/views/layouts/trips.html.erb
+++ b/app/views/layouts/trips.html.erb
@@ -3,7 +3,7 @@
       <div class="wrap selfclear">             
         <ul id="sitenav" class="selfclear">
           <li><%= link_to "Import Trips", :action=>:import %></li>
-          <li><%= link_to "View Trips", :action=>:view %></li>
+          <li><%= link_to "View Trips", :action=>:list %></li>
         </ul>
       </div><!-- /.wrap -->
     </div><!-- /#crossbar -->
