--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,10 @@
 <html>
 <head>
   <title>Lowdown</title>
-  <%= stylesheet_link_tag :all %>
+  <%= stylesheet_link_tag 'application' %>
+  <%= stylesheet_link_tag 'ie' %>
+  <%= stylesheet_link_tag 'print-reset', :media=>"print" %>
+  <%= stylesheet_link_tag 'screen-reset' %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
