--- a/app/views/trips/_trips.html.erb
+++ b/app/views/trips/_trips.html.erb
@@ -21,7 +21,7 @@
                <td><a href="#"> <%= trip.customer.name %> </a></td>
                <td><% trip.result_code %></td>
                <td> <%= trip.allocation.provider.name %></td>
-               <td> (FIXME: funding source / allocation not yet in trip that I can see)</td>
+               <td> <%= trip.allocation.project.funding_source %></td>
                <td>
                  <%= raw gmaps_address_link trip.pickup_address, "trip-pickup" %></td>
                <td>
