--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
   <%= stylesheet_link_tag 'ie' %>
   <%= stylesheet_link_tag 'print-reset', :media=>"print" %>
   <%= stylesheet_link_tag 'screen-reset' %>
+  <%= stylesheet_link_tag 'application' %>
+
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
