fix deprecation warning

--- a/app/views/network/index.html.erb
+++ b/app/views/network/index.html.erb
@@ -63,7 +63,7 @@
                </tr>
                <% end %>
                <!-- totals -->
-               <% row = @controller.sum(county) %>
+               <% row = controller.sum(county) %>
                <tr class="totals">
                  <td>Totals</td>
                  <td><%= row.funds %></td>
