--- a/app/views/summaries/_form.html.erb
+++ b/app/views/summaries/_form.html.erb
@@ -13,16 +13,21 @@
 <%= f.label :prepared_by %> <%= f.text_field :prepared_by %> <br/>
 <%= f.label :report_prepared %> <%= f.date_select :report_prepared %> <br/>
 
- <% f.fields_for :summary_row do |row_form| %>
+<h2>Rows</h2>
+
+<% f.fields_for :summary_row do |row_form| %>
 
     <%= row_form.label :purpose %>
-    <%= row_form.text_field :purpose %>
+    <%= row_form.text_field :purpose %><br/>
 
     <%= row_form.label :trips %>
-    <%= row_form.text_field :trips %>
+    <%= row_form.text_field :trips %><br/>
 
     <%= row_form.label :in_district %>
-    <%= row_form.collection_select :allocation_id, @allocations, :id, :name %>
+    <%= row_form.text_field :in_district %><br/>
+
+    <%= row_form.label :allocation %>
+    <%= row_form.collection_select :allocation_id, @allocations, :id, :name %><br/>
 
     <% unless row_form.object.new_record? %>
       <%= row_form.check_box '_delete' %>
@@ -31,12 +36,3 @@
 
   <% end %>
 
-<% for row in @summary.rows %>
-
-
-    t.integer  "summaries_id"
-    t.string   "purpose"
-    t.integer  "trips"
-    t.boolean  "in_district"
-    t.integer  "allocations_id"
-<% end %>
