--- a/app/views/summaries/_form.html.erb
+++ b/app/views/summaries/_form.html.erb
@@ -1,3 +1,5 @@
+<%= f.hidden_field :id %>
+
 <%= f.label :provider %> <%= f.collection_select :provider_id, @providers, :id, :name %> <br/>
 <%= f.label :period_start %> <%= f.date_select :period_start %> <br/>
 <%= f.label :period_end %> <%= f.date_select :period_end %> <br/>
@@ -16,7 +18,10 @@
 <h2>Rows</h2>
 
 <% f.fields_for :summary_row do |row_form| %>
-
+<br/><hr/><br/>
+    <% if row_form.object.new_record? %>
+      Add a new row:<br/>
+    <% end %>
     <%= row_form.label :purpose %>
     <%= row_form.text_field :purpose %><br/>
 
@@ -30,9 +35,8 @@
     <%= row_form.collection_select :allocation_id, @allocations, :id, :name %><br/>
 
     <% unless row_form.object.new_record? %>
-      <%= row_form.check_box '_delete' %>
-      <%= row_form.label '_delete', 'Remove' %>
+      <%= row_form.check_box '_destroy' %>
+      <%= row_form.label '_destroy', 'Remove' %><br/>
     <% end %>
-
-  <% end %>
+<% end %>
 
