--- a/app/views/network/report.html.erb
+++ b/app/views/network/report.html.erb
@@ -6,7 +6,7 @@
          <table id="grouped-results">
            <thead>
              <tr>
-               <th rowspan="2"></th>
+               <th rowspan="2" colspan="<%= @group_fields.size - 1 %>"></th>
                <th rowspan="2">Name</th>
                <th rowspan="2">Funds</th>
                <th rowspan="2">Agency Other</th>
@@ -36,67 +36,7 @@
              </tr>
            </thead>
            <tbody>
-             <% @counties.each do |county_name, providers| %>
-               <% first = true %>
-               <% providers.each do |provider_name, row| %>
-               <tr>
-                 <% if first %>
-                   <% first = false %>
-                   <th rowspan="<%= providers.size + 1 %>"><span><%= row.county %></span></th>
-                 <% end %>
-                 <td><%= row.allocation.name %></td>
-                 <td><%= '%.2f' % row.funds %></td>
-                 <td><%= '%.2f' % row.agency_other %></td>
-                 <td><%= '%.2f' % row.vehicle_maint %></td>
-                 <td><%= '%.2f' % row.donations_fares %></td>
-                 <td><%= '%.2f' % row.total %></td>
-                 <td><%= row.in_district_trips %></td>
-                 <td><%= row.out_of_district_trips %></td>
-                 <td><%= row.total_trips %></td>
-                 <td><%= row.total_last_year %></td>
-                 <td><%= row.mileage %></td>
-                 <td><%= '%.2f' % row.driver_volunteer_hours %></td>
-                 <td><%= '%.2f' % row.paid_hours %></td>
-                 <td><%= '%.2f' % row.total_hours %></td>
-                 <td><%= '%.2f' % row.cost_per_trip %></td>
-                 <td><%= '%.2f' % row.cost_per_mile %></td>
-                 <td><%= '%.2f' % row.cost_per_hour %></td>
-                 <td><%= row.turn_downs %></td>
-                 <td><%= row.undup_riders.size %></td>
-                 <td><%= row.escort_volunteer_hours %></td>
-                 <td><%= row.admin_volunteer_hours %></td>
-                 <td><%= row.total_volunteer_hours %></td>
-               </tr>
-               <% end %>
-               <!-- totals -->
-               <% row = controller.sum(providers.values) %>
-               <tr class="totals">
-                 <td>Totals</td>
-                 <td><%= '%.2f' % row.funds %></td>
-                 <td><%= '%.2f' % row.agency_other %></td>
-                 <td><%= '%.2f' % row.vehicle_maint %></td>
-                 <td><%= '%.2f' % row.donations_fares %></td>
-                 <td><%= '%.2f' % row.total %></td>
-                 <td><%= row.in_district_trips %></td>
-                 <td><%= row.out_of_district_trips %></td>
-                 <td><%= row.total_trips %></td>
-                 <td><%= '%.2f' % row.total_last_year %></td>
-                 <td><%= row.mileage %></td>
-                 <td><%= '%.2f' % row.volunteer_hours %></td>
-                 <td><%= '%.2f' % row.paid_hours %></td>
-                 <td><%= '%.2f' % row.total_hours %></td>
-                 <td><%= '%.2f' % row.cost_per_trip %></td>
-                 <td><%= row.cost_per_mile == -1 ? 
-                         row.cost_per_mile :
-                         ('%.2f' % row.cost_per_mile) %></td>
-                 <td><%= '%.2f' % row.cost_per_hour %></td>
-                 <td><%= row.turn_downs %></td>
-                 <td><%= row.undup_riders.size %></td>
-                 <td><%= row.escort_volunteer_hours %></td>
-                 <td><%= row.admin_volunteer_hours %></td>
-                 <td><%= row.total_volunteer_hours %></td>
-               </tr>
-             <% end %>
+	     <%= render :partial=> "nested_rows", :locals=>{:rows=>@results, :group_fields=>@group_fields} %>
            </tbody>
          </table>
 
