--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,15 @@
   <%= stylesheet_link_tag 'print-reset', :media=>"print" %>
   <%= stylesheet_link_tag 'screen-reset' %>
   <%= stylesheet_link_tag 'application' %>
+  <%= stylesheet_link_tag 'ui.combobox' %>
 
-  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag 'jquery-1.4.2.min' %>
+  <%= javascript_include_tag 'jquery-ui-1.8.6.custom.min' %>
+  <%= javascript_include_tag 'ui.spinner.min' %>
+  <%= javascript_include_tag 'application' %>
+
+  <!--%= javascript_include_tag :defaults %-->
+
   <%= csrf_meta_tag %>
 </head>
 <body>
