--- a/app/views/layouts/network.html.erb
+++ b/app/views/layouts/network.html.erb
@@ -3,7 +3,7 @@
       <div class="wrap selfclear">             
         <ul id="sitenav" class="selfclear">
           <li><%= link_to "Create Report", :action=>:show_create_report %></li>
-          <li><%= link_to "Edit Tags", :action=>:show_edit_tags %></li>
+          <li><%= link_to "Allocation Tags", :action=>:tag_index %></li>
           <li><%= link_to "View Network Summary", :action=>:index %></li>
         </ul>
       </div><!-- /.wrap -->
