--- a/app/views/network/tag_index.html.erb
+++ b/app/views/network/tag_index.html.erb
@@ -3,4 +3,8 @@
 <% for tag in @tags %>
 
   <%= link_to tag.name, :action=>'show_edit_tag', :id=>tag.name %>: <%= tag.count %>  <%= button_to "X", :action=>'delete_tag', :id=>tag.name, :confirm=>true %><br/>
+
 <% end %>
+
+<br/>
+<%= link_to "Create new tag", :action=>'show_create_tag' %>
