--- a/app/views/summaries/_form.html.erb
+++ b/app/views/summaries/_form.html.erb
@@ -14,10 +14,11 @@
 <%= f.label :complaints %> <%= f.text_field :complaints %> <br/>
 <%= f.label :prepared_by %> <%= f.text_field :prepared_by %> <br/>
 <%= f.label :report_prepared %> <%= f.date_select :report_prepared %> <br/>
+<%= f.label :allocation %> <%= f.collection_select :allocation_id, @allocations, :id, :name %><br/>
 
 <h2>Rows</h2>
 
-<% f.fields_for :summary_row do |row_form| %>
+<%= f.fields_for :summary_row do |row_form| %>
 <br/><hr/><br/>
     <% if row_form.object.new_record? %>
       Add a new row:<br/>
@@ -29,10 +30,7 @@
     <%= row_form.text_field :trips %><br/>
 
     <%= row_form.label :in_district %>
-    <%= row_form.text_field :in_district %><br/>
-
-    <%= row_form.label :allocation %>
-    <%= row_form.collection_select :allocation_id, @allocations, :id, :name %><br/>
+    <%= row_form.check_box :in_district %><br/>
 
     <% unless row_form.object.new_record? %>
       <%= row_form.check_box '_destroy' %>
