make index link to all pages; make all pages link to index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 
   <div id="header">
     <div class="wrap selfclear">
-      <a id="logo" href="#"><strong>Low</strong>down</a>
+      <a id="logo" href="/"><strong>Low</strong>down</a>
       <div id="login-area">
         <% if current_user %>
         <a href="#"><%= current_user.name %></a> | <a href="#">Log out</a>
