make names match

--- a/app/views/summaries/_form.html.erb
+++ b/app/views/summaries/_form.html.erb
@@ -18,7 +18,7 @@
 
 <h2>Rows</h2>
 
-<%= f.fields_for :summary_row do |row_form| %>
+<%= f.fields_for :summary_rows do |row_form| %>
 <br/><hr/><br/>
     <% if row_form.object.new_record? %>
       Add a new row:<br/>
