use current versions only

--- a/app/views/trips/_trips.html.erb
+++ b/app/views/trips/_trips.html.erb
@@ -35,7 +35,7 @@ No
 <% end %>
                <td>
 <% if trip.run %>
-<%= link_to trip.run.display_name, url_for(:action=>:run, :id=>trip.run.id), :html_options=>{:title=>"View all trips in this Run"} %></td>
+<%= link_to trip.run.display_name, url_for(:action=>:run, :id=>trip.run.base_id), :html_options=>{:title=>"View all trips in this Run"} %></td>
 <% else %>
 (no run)
 <% end %>
