--- a/app/views/network/show_create_report.html.erb
+++ b/app/views/network/show_create_report.html.erb
@@ -19,34 +19,34 @@
               <fieldset class="selfclear">
                 <!-- PLEASE NOTE: These fields are currently in the order they appear on the report. We may decide to present them in some other order (like alphabetical), but the current approach isn't random -->
                 <div class="fourcol">
-                  <input type="checkbox" checked name="q[f[]]" value="name" /><label for="name">Name</label><br />
-                  <input type="checkbox" checked name="q[f[]]" value="funds" /><label for="name">Funds</label><br />
-                  <input type="checkbox" checked name="q[f[]]" value="agency_other" /><label for="name">Agency Other</label><br />
-                  <input type="checkbox" checked name="q[f[]]" value="vehicle_maint" /><label for="name">Vechicle Maint.</label><br />
-                  <input type="checkbox" checked name="q[f[]]" value="donations_fares" /><label for="name">Donations Fares</label><br />
-                  <input type="checkbox" checked name="q[f[]]" value="total" /><label for="name">Total</label>
+                  <input type="checkbox" checked name="q[f[funds]]" value="1" /><label for="name">Funds</label><br />
+                  <input type="checkbox" checked name="q[f[fares]]" value="1" /><label for="name">Fares</label><br />
+                  <input type="checkbox" checked name="q[f[agency_other]]" value="1" /><label for="name">Agency Other</label><br />
+                  <input type="checkbox" checked name="q[f[vehicle_maint]]" value="1" /><label for="name">Vechicle Maint.</label><br />
+                  <input type="checkbox" checked name="q[f[donations_fares]]" value="1" /><label for="name">Donations Fares</label><br />
+                  <input type="checkbox" checked name="q[f[total]]" value="1" /><label for="name">Total</label>
                 </div>
                 <div class="fourcol">
-                  <input type="checkbox" checked name="q[f[]]" value="in_district_trips" /><label for="name">In District Rides</label><br />
-                  <input type="checkbox" checked name="q[f[]]" value="out_of_district_trips" /><label for="name">Out of District Rides</label><br />
-                  <input type="checkbox" checked name="q[f[]]" value="total_this_period" /><label for="name">Total this Period</label><br />
-                  <input type="checkbox" checked name="q[f[]]" value="total_this_period_last_year" /><label for="name">Total this Period Last Year</label><br />
-                  <input type="checkbox" checked name="q[f[]]" value="mileage" /><label for="name">Mileage</label><br />
-                  <input type="checkbox" checked name="q[f[]]" value="volunteer_hours" /><label for="name">Volunteer Hours</label>
+                  <input type="checkbox" checked name="q[f[in_district_trips]]" value="1" /><label for="name">In District Rides</label><br />
+                  <input type="checkbox" checked name="q[f[out_of_district_trips]]" value="1" /><label for="name">Out of District Rides</label><br />
+
+                  <input type="checkbox" checked name="q[f[total_last_year]]" value="1" /><label for="name">Total this Period Last Year</label><br />
+                  <input type="checkbox" checked name="q[f[mileage]]" value="1" /><label for="name">Mileage</label><br />
+                  <input type="checkbox" checked name="q[f[volunteer_hours]]" value="1" /><label for="name">Volunteer Hours</label>
                 </div>
                 <div class="fourcol">
-                  <input type="checkbox" checked name="q[f[]]" value="paid_hours" /><label for="name">Paid Hours</label><br />
-                  <input type="checkbox" checked name="q[f[]]" value="total_hours" /><label for="name">Total Hours</label><br />
-                  <input type="checkbox" checked name="q[f[]]" value="cost_per_trip" /><label for="name">Cost/Trip</label><br />
-                  <input type="checkbox" checked name="q[f[]]" value="cost_per_mile" /><label for="name">Cost/Mile</label><br />
-                  <input type="checkbox" checked name="q[f[]]" value="cost_per_hour" /><label for="name">Cost/Hour</label>
+                  <input type="checkbox" checked name="q[f[paid_hours]]" value="1" /><label for="name">Paid Hours</label><br />
+                  <input type="checkbox" checked name="q[f[total_hours]]" value="1" /><label for="name">Total Hours</label><br />
+                  <input type="checkbox" checked name="q[f[cost_per_trip]]" value="1" /><label for="name">Cost/Trip</label><br />
+                  <input type="checkbox" checked name="q[f[cost_per_mile]]" value="1" /><label for="name">Cost/Mile</label><br />
+                  <input type="checkbox" checked name="q[f[cost_per_hour]]" value="1" /><label for="name">Cost/Hour</label>
                 </div>
                 <div class="fourcol">
-                  <input type="checkbox" checked name="q[f[]]" value="turn_downs" /><label for="name">Turn Downs</label><br />
-                  <input type="checkbox" checked name="q[f[]]" value="undup_riders" /><label for="name">Undup Riders</label><br />
-                  <input type="checkbox" checked name="q[f[]]" value="escort_hours" /><label for="name">Escort Hours</label><br />
-                  <input type="checkbox" checked name="q[f[]]" value="admin_hours" /><label for="name">Admin Hours</label><br />
-                  <input type="checkbox" checked name="q[f[]]" value="total_hours" /><label for="name">Total Hours</label>
+                  <input type="checkbox" checked name="q[f[turn_downs]]" value="1" /><label for="name">Turn Downs</label><br />
+                  <input type="checkbox" checked name="q[f[undup_riders]]" value="1" /><label for="name">Undup Riders</label><br />
+                  <input type="checkbox" checked name="q[f[escort_volunteer_hours]]" value="1" /><label for="name">Escort Hours</label><br />
+                  <input type="checkbox" checked name="q[f[admin_volunteer_hours]]" value="1" /><label for="name">Admin Hours</label><br />
+                  <input type="checkbox" checked name="q[f[total_hours]]" value="1" /><label for="name">Total Hours</label>
                 </div>
               </fieldset>
             </div>
